--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.10.1",
+    "@vercel/postgres": "^0.9.0",
+    "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
-    "geist": "^1.3.0",
+    "geist": "^1.3.1",
     "next": "^14.2.4",
     "postgres": "^3.4.4",
     "react": "^18.3.1",
